@@ -194,7 +194,7 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .span9{width:74%}
 .span9p5{width:80%}
 .span10{width:83%}
-.span12{width:940px}
+.span12{width:100%}
 .subtle{border-color:#adcb83;border-top:0}
 .sub-text{font-size:10px}
 .text-center{text-align:center}
