@@ -379,16 +379,16 @@ table tr th:last-child, table tr td:last-child {
    display: none; padding: 9px 18px;
 }
 .row            { overflow: hidden; }
-.row-fluid      { width: auto;  }
+.row-fluid      { width: auto; }
 [class*="span"] { float: left; min-height: 18px; }
-.span2          { width: 16%;   }
-.span2p5        { width: 20%;   }
-.span3          { width: 25%;   }
-.span5          { width: 41%;   }
-.span9          { width: 74%;   }
-.span9p5        { width: 80%;   }
-.span10         { width: 83%;   }
-.span12         { width: 940px; }
+.span2          { width: 16%;  }
+.span2p5        { width: 20%;  }
+.span3          { width: 25%;  }
+.span5          { width: 41%;  }
+.span9          { width: 74%;  }
+.span9p5        { width: 80%;  }
+.span10         { width: 83%;  }
+.span12         { width: 100%; }
 .subtle         { border-color: @lines; border-top: 0; }
 .sub-text       { font-size: 10px; }
 .text-center    { text-align: center; }
